--- a/set-1/screenshots/part-4/localhost_debug.html
+++ b/set-1/screenshots/part-4/localhost_debug.html
@@ -1,102 +1,7 @@
 <html class="gr__localhost"><head>
-<meta http-equiv="content-type" content="text/html; charset=windows-1252"><style class="darkreader darkreader--fallback" media="screen"></style><style class="darkreader darkreader--text" media="screen"></style><style class="darkreader darkreader--invert" media="screen">.jfk-bubble {
-    filter: invert(100%) hue-rotate(180deg) contrast(90%) !important;
-}</style><style class="darkreader darkreader--inline" media="screen">[data-darkreader-inline-bgcolor] {
-  background-color: var(--darkreader-inline-bgcolor) !important;
-}
-[data-darkreader-inline-bgimage] {
-  background-image: var(--darkreader-inline-bgimage) !important;
-}
-[data-darkreader-inline-border] {
-  border-color: var(--darkreader-inline-border) !important;
-}
-[data-darkreader-inline-border-bottom] {
-  border-bottom-color: var(--darkreader-inline-border-bottom) !important;
-}
-[data-darkreader-inline-border-left] {
-  border-left-color: var(--darkreader-inline-border-left) !important;
-}
-[data-darkreader-inline-border-right] {
-  border-right-color: var(--darkreader-inline-border-right) !important;
-}
-[data-darkreader-inline-border-top] {
-  border-top-color: var(--darkreader-inline-border-top) !important;
-}
-[data-darkreader-inline-boxshadow] {
-  box-shadow: var(--darkreader-inline-boxshadow) !important;
-}
-[data-darkreader-inline-color] {
-  color: var(--darkreader-inline-color) !important;
-}
-[data-darkreader-inline-fill] {
-  fill: var(--darkreader-inline-fill) !important;
-}
-[data-darkreader-inline-stroke] {
-  stroke: var(--darkreader-inline-stroke) !important;
-}
-[data-darkreader-inline-outline] {
-  outline-color: var(--darkreader-inline-outline) !important;
-}</style><style class="darkreader darkreader--user-agent" media="screen">html {
-    background-color: #181a1b !important;
-}
-html, body, input, textarea, select, button {
-    background-color: #181a1b;
-}
-html, body, input, textarea, select, button {
-    border-color: #575757;
-    color: #e8e6e3;
-}
-a {
-    color: #3391ff;
-}
-table {
-    border-color: #4c4c4c;
-}
-::placeholder {
-    color: #bab5ab;
-}
-::selection {
-    background-color: #005ccc;
-    color: #ffffff;
-}
-::-moz-selection {
-    background-color: #005ccc;
-    color: #ffffff;
-}
-input:-webkit-autofill,
-textarea:-webkit-autofill,
-select:-webkit-autofill {
-    background-color: #545b00 !important;
-    color: #e8e6e3 !important;
-}
-::-webkit-scrollbar {
-    background-color: #1c1e1f;
-    color: #c5c1b9;
-}
-::-webkit-scrollbar-thumb {
-    background-color: #2a2c2e;
-}
-::-webkit-scrollbar-thumb:hover {
-    background-color: #323537;
-}
-::-webkit-scrollbar-thumb:active {
-    background-color: #3d4043;
-}
-::-webkit-scrollbar-corner {
-    background-color: #181a1b;
-}
-* {
-    scrollbar-color: #2a2c2e #1c1e1f;
-}</style><style class="darkreader darkreader--override" media="screen">.vimvixen-hint {
-    background-color: #7b5300 !important;
-    border-color: #d8b013 !important;
-    color: #f3e8c8 !important;
-}
-::placeholder {
-    opacity: 0.5 !important;
-}</style></head><body style="--darkreader-inline-bgcolor:#181a1b;" data-darkreader-inline-bgcolor="" data-gr-c-s-loaded="true" bgcolor="#ffffff">
+<meta http-equiv="content-type" content="text/html; charset=windows-1252"></head><body data-gr-c-s-loaded="true" bgcolor="#ffffff">
 <pre>
-s_server -accept 9999 -www -cert server.crt -key server.key -CAfile ../ca/ca.crt -verify 5 -debug 
+s_server -accept 9999 -www -cert server.crt -key server.key -Verify 5 -CAfile ../ca/ca.crt -debug 
 Secure Renegotiation IS NOT supported
 Ciphers supported in s_server binary
 TLSv1.3    :TLS_AES_256_GCM_SHA384    TLSv1.3    :TLS_CHACHA20_POLY1305_SHA256 
@@ -150,13 +55,13 @@ New, TLSv1.3, Cipher is TLS_AES_128_GCM_SHA256
 SSL-Session:
     Protocol  : TLSv1.3
     Cipher    : TLS_AES_128_GCM_SHA256
-    Session-ID: C3C04DD8D505C8AA423008809F7B8A057311B1BFF8A650EB2EE6394211DCD961
+    Session-ID: 4374C3E4C60FB9A0850E0F6D70BE214C3CE87EBA55CF2809128EA2CC936D6138
     Session-ID-ctx: 01000000
-    Resumption PSK: B8331F5DD9064DDFFB2048A6E9FF662B219CAAF941A81B866BD259207E690747
+    Resumption PSK: C365DE344BFC4931F862C234EE59330F28EB4DC0D059CA72A8B467B39DF3C675
     PSK identity: None
     PSK identity hint: None
     SRP username: None
-    Start Time: 1586979748
+    Start Time: 1587290387
     Timeout   : 7200 (sec)
     Verify return code: 0 (ok)
     Extended master secret: no
