--- a/set-1/screenshots/part-4/localhost_debug.html
+++ b/set-1/screenshots/part-4/localhost_debug.html
@@ -55,13 +55,13 @@ New, TLSv1.3, Cipher is TLS_AES_128_GCM_SHA256
 SSL-Session:
     Protocol  : TLSv1.3
     Cipher    : TLS_AES_128_GCM_SHA256
-    Session-ID: 4374C3E4C60FB9A0850E0F6D70BE214C3CE87EBA55CF2809128EA2CC936D6138
+    Session-ID: A925C3AFD5ED56A95312FFB45AEB3CDAF4B8D27F297024549D037015407A0D26
     Session-ID-ctx: 01000000
-    Resumption PSK: C365DE344BFC4931F862C234EE59330F28EB4DC0D059CA72A8B467B39DF3C675
+    Resumption PSK: 9E11B988AC2D598CCF6FE4651F15B692A3A33529BBAC7FAE5B0B4F2875BA0E1F
     PSK identity: None
     PSK identity hint: None
     SRP username: None
-    Start Time: 1587290387
+    Start Time: 1587327346
     Timeout   : 7200 (sec)
     Verify return code: 0 (ok)
     Extended master secret: no
@@ -85,70 +85,73 @@ Certificate:
     Data:
         Version: 1 (0x0)
         Serial Number:
-            2c:38:f0:73:26:56:01:bd:83:c1:1f:3a:8f:c1:cc:2c:4d:3a:eb:6b
+            44:80:6b:17:54:92:9a:88:ff:d0:a5:08:8a:98:86:6e:c6:4a:44:50
         Signature Algorithm: sha256WithRSAEncryption
-        Issuer: C=IN, CN=Reeshabh Kumar Ranjan/emailAddress=reeshabh17086@iiitd.ac.in
+        Issuer: C=IN, O=CA_reeshabh17086, OU=Security Engineering, CN=CA_reeshabh17086/emailAddress=reeshabh17086@iiitd.ac.in
         Validity
-            Not Before: Apr 14 18:23:11 2020 GMT
-            Not After : Apr 14 18:23:11 2021 GMT
-        Subject: C=IN, CN=Reeshabh/emailAddress=reeshabh17086@iiitd.ac.in
+            Not Before: Apr 19 17:10:38 2020 GMT
+            Not After : Apr 19 17:10:38 2021 GMT
+        Subject: C=IN, O=Client_reeshabh17086, OU=Security Engineering, CN=Client_reeshabh17086/emailAddress=reeshabh17086@iiitd.ac.in
         Subject Public Key Info:
             Public Key Algorithm: rsaEncryption
                 RSA Public-Key: (2048 bit)
                 Modulus:
-                    00:a7:cb:f5:91:5b:f0:e9:d9:39:f4:3a:32:e9:11:
-                    55:ac:c2:4b:a4:c2:25:34:3c:87:74:21:c1:12:b8:
-                    d5:39:5a:a9:b6:ff:af:4c:39:3a:31:f6:51:e7:c8:
-                    e4:66:d9:07:bc:d5:02:49:e1:1d:3e:3c:fd:b5:d5:
-                    0d:da:05:cc:9c:9d:48:17:c1:fb:5b:ba:0e:d9:fe:
-                    32:bf:4f:f6:38:f1:00:7c:a2:06:ca:43:1f:34:f8:
-                    50:cd:68:56:88:3b:01:02:b0:75:73:68:12:79:ab:
-                    62:9c:57:bf:0a:a9:8b:81:6c:24:72:81:b2:82:e9:
-                    a5:12:49:23:c3:df:01:32:05:f4:0a:4f:e6:ba:ab:
-                    e5:11:82:04:81:e9:05:41:81:ee:b9:06:15:d1:ae:
-                    4f:dc:96:a8:39:dd:f6:d6:c6:63:30:8f:4e:c2:b4:
-                    6e:d5:d4:54:d9:86:00:90:24:4d:b9:c1:e4:1c:74:
-                    d8:9e:c0:3b:dc:d9:c1:8e:34:f7:b8:f1:4d:e9:63:
-                    24:36:93:ef:8e:3c:ae:37:4b:46:79:58:cf:0c:c0:
-                    46:84:83:48:e8:52:35:b8:e0:e3:cc:7f:85:99:73:
-                    70:33:af:38:2d:22:a2:80:de:a5:ca:32:63:1a:73:
-                    a9:0f:f9:44:0b:bc:83:4c:58:c9:7f:bd:da:d6:2e:
-                    db:15
+                    00:a1:5e:64:ad:0c:38:4c:5b:4e:7b:7e:0c:81:5b:
+                    a6:05:39:65:17:48:37:c0:08:77:10:a1:dd:ad:73:
+                    dd:2a:81:cc:a2:84:f5:61:f5:24:e9:ca:f4:98:85:
+                    a0:a1:68:da:fa:46:85:0f:25:e3:94:b7:c7:a2:0a:
+                    f5:39:59:0d:f8:1b:b0:6a:8a:69:db:36:48:f4:ce:
+                    f9:c9:e8:77:ac:80:e6:c5:8f:f1:97:5d:8d:61:8e:
+                    b4:76:e8:7f:2a:81:99:bd:5e:d3:89:90:db:ce:13:
+                    df:de:4d:2d:a7:57:e5:e0:57:61:f5:87:44:7b:97:
+                    1b:60:84:e5:44:6a:5b:0a:55:18:e0:5b:70:ad:39:
+                    5d:e3:15:74:b0:a6:ea:33:18:3f:80:22:bc:3b:0d:
+                    be:bb:e8:56:5b:a4:38:4e:c5:6d:65:40:c4:5d:da:
+                    85:45:f3:e3:f8:07:e7:17:1a:77:f2:3c:68:a3:b1:
+                    3d:48:fc:d7:7b:1f:54:19:78:7b:da:98:77:cd:fd:
+                    cd:ee:65:82:be:1a:a1:30:50:94:81:8d:ce:f1:cb:
+                    3c:22:ab:ac:63:34:e0:e6:68:76:27:4f:2f:22:c8:
+                    01:c2:5f:9e:d2:40:69:09:09:df:71:5c:6e:54:ec:
+                    50:72:c9:b0:17:c0:1d:1f:bb:9f:2d:e0:68:d0:a0:
+                    fc:2b
                 Exponent: 65537 (0x10001)
     Signature Algorithm: sha256WithRSAEncryption
-         48:7a:05:fb:af:46:fb:e0:bd:57:cb:43:b2:fd:5f:91:97:27:
-         55:22:6f:c4:d0:43:cd:64:ff:79:48:71:ba:71:77:59:7e:14:
-         7c:cf:d9:8c:1d:11:04:2e:74:e5:7f:57:8b:95:ee:0c:1e:be:
-         c4:a6:c2:e3:ed:10:80:3b:2b:1e:04:75:60:40:ad:f5:3a:01:
-         28:94:01:cc:6c:b9:95:cd:2b:14:20:8a:56:1d:e1:62:99:85:
-         c0:8b:b3:49:23:7d:ff:84:70:ef:b2:ba:7d:4f:fc:b7:04:8e:
-         f4:86:e7:38:87:3e:55:be:32:92:5d:ed:3f:db:41:02:eb:94:
-         ab:85:e7:b7:5b:c0:cd:ab:89:bf:27:e6:e7:3c:fe:30:dd:88:
-         32:cc:a6:25:56:21:11:e2:13:0e:d2:ba:9e:02:b5:d8:52:ce:
-         2a:5b:8f:b3:f0:c6:49:86:84:7b:b3:f8:83:d5:12:9a:71:19:
-         50:50:da:5b:19:74:1a:f7:3b:80:52:34:ab:4c:cf:68:b2:eb:
-         ab:96:69:c6:7d:e8:33:07:c1:93:89:e9:f1:00:c6:5a:d6:8b:
-         a2:e7:f6:40:94:57:bf:d4:f5:3d:b8:5a:63:4e:b4:52:39:fc:
-         f2:0e:39:b4:e4:a3:6e:f3:65:8f:01:63:e1:0b:74:1f:f4:66:
-         d4:9e:cc:10
+         88:ad:3f:55:c2:05:c5:e2:2b:16:3d:a6:a9:b0:87:a2:00:fc:
+         1d:1d:2d:d3:64:7b:ed:93:bd:d2:a0:87:fd:5d:55:07:56:16:
+         59:fc:f9:e2:6d:26:9f:5c:13:a8:7b:e1:35:4c:f1:29:bf:b9:
+         df:28:bb:88:06:f8:89:21:41:fd:a9:e4:20:17:4b:69:f8:97:
+         42:98:42:90:fc:de:a9:e2:5b:00:8f:23:4d:c9:d4:87:8e:81:
+         d3:a3:f5:55:0e:b8:6f:4f:6a:5d:0a:68:10:24:de:67:7f:ac:
+         8b:2f:5b:c9:d5:5f:2d:3c:7c:1b:46:44:b3:2c:1e:80:9f:1d:
+         07:ac:c3:18:d9:13:d6:42:ce:15:e2:cf:99:0c:4e:a0:c8:5d:
+         ae:a9:28:21:58:21:74:06:64:11:b6:0f:c4:51:f0:e3:0f:65:
+         83:c2:43:52:12:15:2a:fc:0f:17:e2:5a:99:3e:34:6d:2b:37:
+         52:8e:fd:45:7e:a3:6f:35:bf:b1:17:be:06:10:ee:77:1e:4a:
+         5a:69:b3:b7:2d:0b:08:36:74:22:e4:eb:41:7a:11:94:50:aa:
+         bb:3d:a2:79:75:30:28:ac:bf:a2:c0:9e:64:87:82:a8:71:a9:
+         b9:6f:4b:f6:17:b0:d4:1e:fd:f8:50:a7:7f:48:4c:b6:60:c6:
+         95:5a:96:3a
 -----BEGIN CERTIFICATE-----
-MIIDKDCCAhACFCw48HMmVgG9g8EfOo/BzCxNOutrMA0GCSqGSIb3DQEBCwUAMFcx
-CzAJBgNVBAYTAklOMR4wHAYDVQQDDBVSZWVzaGFiaCBLdW1hciBSYW5qYW4xKDAm
-BgkqhkiG9w0BCQEWGXJlZXNoYWJoMTcwODZAaWlpdGQuYWMuaW4wHhcNMjAwNDE0
-MTgyMzExWhcNMjEwNDE0MTgyMzExWjBKMQswCQYDVQQGEwJJTjERMA8GA1UEAwwI
-UmVlc2hhYmgxKDAmBgkqhkiG9w0BCQEWGXJlZXNoYWJoMTcwODZAaWlpdGQuYWMu
-aW4wggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIBAQCny/WRW/Dp2Tn0OjLp
-EVWswkukwiU0PId0IcESuNU5Wqm2/69MOTox9lHnyORm2Qe81QJJ4R0+PP211Q3a
-BcycnUgXwftbug7Z/jK/T/Y48QB8ogbKQx80+FDNaFaIOwECsHVzaBJ5q2KcV78K
-qYuBbCRygbKC6aUSSSPD3wEyBfQKT+a6q+URggSB6QVBge65BhXRrk/clqg53fbW
-xmMwj07CtG7V1FTZhgCQJE25weQcdNiewDvc2cGONPe48U3pYyQ2k++OPK43S0Z5
-WM8MwEaEg0joUjW44OPMf4WZc3AzrzgtIqKA3qXKMmMac6kP+UQLvINMWMl/vdrW
-LtsVAgMBAAEwDQYJKoZIhvcNAQELBQADggEBAEh6BfuvRvvgvVfLQ7L9X5GXJ1Ui
-b8TQQ81k/3lIcbpxd1l+FHzP2YwdEQQudOV/V4uV7gwevsSmwuPtEIA7Kx4EdWBA
-rfU6ASiUAcxsuZXNKxQgilYd4WKZhcCLs0kjff+EcO+yun1P/LcEjvSG5ziHPlW+
-MpJd7T/bQQLrlKuF57dbwM2rib8n5uc8/jDdiDLMpiVWIRHiEw7Sup4CtdhSzipb
-j7PwxkmGhHuz+IPVEppxGVBQ2lsZdBr3O4BSNKtMz2iy66uWacZ96DMHwZOJ6fEA
-xlrWi6Ln9kCUV7/U9T24WmNOtFI5/PIOObTko27zZY8BY+ELdB/0ZtSezBA=
+MIIDqTCCApECFESAaxdUkpqI/9ClCIqYhm7GSkRQMA0GCSqGSIb3DQEBCwUAMIGM
+MQswCQYDVQQGEwJJTjEZMBcGA1UECgwQQ0FfcmVlc2hhYmgxNzA4NjEdMBsGA1UE
+CwwUU2VjdXJpdHkgRW5naW5lZXJpbmcxGTAXBgNVBAMMEENBX3JlZXNoYWJoMTcw
+ODYxKDAmBgkqhkiG9w0BCQEWGXJlZXNoYWJoMTcwODZAaWlpdGQuYWMuaW4wHhcN
+MjAwNDE5MTcxMDM4WhcNMjEwNDE5MTcxMDM4WjCBlDELMAkGA1UEBhMCSU4xHTAb
+BgNVBAoMFENsaWVudF9yZWVzaGFiaDE3MDg2MR0wGwYDVQQLDBRTZWN1cml0eSBF
+bmdpbmVlcmluZzEdMBsGA1UEAwwUQ2xpZW50X3JlZXNoYWJoMTcwODYxKDAmBgkq
+hkiG9w0BCQEWGXJlZXNoYWJoMTcwODZAaWlpdGQuYWMuaW4wggEiMA0GCSqGSIb3
+DQEBAQUAA4IBDwAwggEKAoIBAQChXmStDDhMW057fgyBW6YFOWUXSDfACHcQod2t
+c90qgcyihPVh9STpyvSYhaChaNr6RoUPJeOUt8eiCvU5WQ34G7BqimnbNkj0zvnJ
+6HesgObFj/GXXY1hjrR26H8qgZm9XtOJkNvOE9/eTS2nV+XgV2H1h0R7lxtghOVE
+alsKVRjgW3CtOV3jFXSwpuozGD+AIrw7Db676FZbpDhOxW1lQMRd2oVF8+P4B+cX
+GnfyPGijsT1I/Nd7H1QZeHvamHfN/c3uZYK+GqEwUJSBjc7xyzwiq6xjNODmaHYn
+Ty8iyAHCX57SQGkJCd9xXG5U7FByybAXwB0fu58t4GjQoPwrAgMBAAEwDQYJKoZI
+hvcNAQELBQADggEBAIitP1XCBcXiKxY9pqmwh6IA/B0dLdNke+2TvdKgh/1dVQdW
+Fln8+eJtJp9cE6h74TVM8Sm/ud8ou4gG+IkhQf2p5CAXS2n4l0KYQpD83qniWwCP
+I03J1IeOgdOj9VUOuG9Pal0KaBAk3md/rIsvW8nVXy08fBtGRLMsHoCfHQeswxjZ
+E9ZCzhXiz5kMTqDIXa6pKCFYIXQGZBG2D8RR8OMPZYPCQ1ISFSr8DxfiWpk+NG0r
+N1KO/UV+o281v7EXvgYQ7nceSlpps7ctCwg2dCLk60F6EZRQqrs9onl1MCisv6LA
+nmSHgqhxqblvS/YXsNQe/fhQp39ITLZgxpValjo=
 -----END CERTIFICATE-----
 </pre>
 
